attempt fix of scrolling on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,9 @@ a {
   /* width: 90vw; */
   /* bottom: 40px; */
   height: 80%;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll; 
 }
 
 .options {
